# anthropic-computer-use-bash-and-files

./: .env.sample  .gitignore  README.md  pyproject.toml
AI_DOCS/: anthropic_example.md  computer_use.md
data/: app.db
sessions/: 20241023-144551-e40e4b.yaml  20241023-144617-9adf8f.yaml  20241023-144933-646dcd.yaml  20241023-145110-8edc17.yaml
src/anthropic_computer_use/: __init__.py  main.py
