[project]
name = "anthropic-computer-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.37.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
main = "anthropic_computer_use.main:main"
